[package]
name = "typst_world"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true
publish = false

[dependencies]
typst.workspace = true
typst-kit = { workspace = true, features = ["embed-fonts"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }

[lints]
workspace = true
